@@ -158,20 +158,20 @@ public final class EditorFindSupport {
     private WeakReference<JTextComponent> focusedTextComponent;
 
     private final WeakHashMap<JTextComponent, Map<String, WeakReference<BlockHighlighting>>> comp2layer =
-        new WeakHashMap<JTextComponent, Map<String, WeakReference<BlockHighlighting>>>();
+        new WeakHashMap<>();
     
     /** Support for firing change events */
-    private PropertyChangeSupport changeSupport = new PropertyChangeSupport(this);
+    private final PropertyChangeSupport changeSupport = new PropertyChangeSupport(this);
     
     private SPW lastSelected;
-    private List<SPW> historyList = new ArrayList<SPW>();
-    private List<RP> replaceList = new ArrayList<RP>();
+    private List<SPW> historyList = new ArrayList<>();
+    private List<RP> replaceList = new ArrayList<>();
 
     private EditorFindSupport() {
     }
 
     /** Get shared instance of find support */
-    public static EditorFindSupport getInstance() {
+    public synchronized static EditorFindSupport getInstance() {
         if (findSupport == null) {
             findSupport = new EditorFindSupport();
         }
@@ -179,7 +179,7 @@ public final class EditorFindSupport {
     }
 
     public Map<String, Object> createDefaultFindProperties() {
-        HashMap<String, Object> props = new HashMap<String, Object>();
+        HashMap<String, Object> props = new HashMap<>();
         
         props.put(FIND_WHAT, null);
         props.put(FIND_REPLACE_WITH, null);
@@ -224,7 +224,7 @@ public final class EditorFindSupport {
      */
     public int[] getBlocks(int[] blocks, Document doc,
                     int startOffset, int endOffset) throws BadLocationException {
-        Map props = getValidFindProperties(null);
+        Map<String, Object> props = getValidFindProperties(null);
         
         boolean blockSearch = Boolean.TRUE.equals(props.get(FIND_BLOCK_SEARCH));
         Position blockSearchStartPos = (Position) props.get(FIND_BLOCK_SEARCH_START);
@@ -277,7 +277,7 @@ public final class EditorFindSupport {
     }
     
     public void setFocusedTextComponent(JTextComponent component) { 
-        focusedTextComponent = new WeakReference<JTextComponent>(component);
+        focusedTextComponent = new WeakReference<>(component);
         firePropertyChange(null, null, null);
     }
     
@@ -389,7 +389,7 @@ public final class EditorFindSupport {
         }
     }
     
-    private boolean isBackSearch(Map props, boolean oppositeDir) {
+    private boolean isBackSearch(Map<String, Object> props, boolean oppositeDir) {
         Boolean b = (Boolean)props.get(FIND_BACKWARD_SEARCH);
         boolean back = (b != null && b.booleanValue());
         if (oppositeDir) {
@@ -723,7 +723,7 @@ public final class EditorFindSupport {
      */
     void replaceAllImpl(Map<String, Object> props, JTextComponent c) {
         props = getValidFindProperties(props);
-        Map<String,Object> localProps = new HashMap<String, Object>(props);
+        Map<String,Object> localProps = new HashMap<>(props);
         String replaceWithOriginal = (String)localProps.get(FIND_REPLACE_WITH);
 
         Object findWhat = localProps.get(FIND_WHAT);
@@ -746,6 +746,7 @@ public final class EditorFindSupport {
         if (wrapSearch){
             localProps.put(FIND_WRAP_SEARCH, Boolean.FALSE);
             localProps.put(FIND_BACKWARD_SEARCH, Boolean.FALSE);
+            backSearch = false;
             firePropertyChange(null, null, null);
         }
 
@@ -832,16 +833,13 @@ public final class EditorFindSupport {
 
                 // Display message about replacement
                 if (totalCnt == 0){
-                    String exp = "'' "; //NOI18N
-                    if (findWhat != null) { // nothing to search for
-                        exp = "'" + findWhat + "' "; // NOI18N
-                    }
+                    String exp = "'" + findWhat + "' "; //NOI18N
                     ComponentUtils.setStatusText(c, exp + NbBundle.getMessage(
                                 EditorFindSupport.class, NOT_FOUND_LOCALE), IMPORTANCE_FIND_OR_REPLACE);
                 }else{
                     MessageFormat fmt = new MessageFormat(
                                             NbBundle.getMessage(EditorFindSupport.class, ITEMS_REPLACED_LOCALE));
-                    String msg = fmt.format(new Object[] { new Integer(replacedCnt), new Integer(totalCnt) });
+                    String msg = fmt.format(new Object[] { Integer.valueOf(replacedCnt), Integer.valueOf(totalCnt) });
                     ComponentUtils.setStatusText(c, msg, IMPORTANCE_FIND_OR_REPLACE);
                 }
 
@@ -861,11 +859,11 @@ public final class EditorFindSupport {
             Map<String, WeakReference<BlockHighlighting>> type2layer = comp2layer.get(component);
 
             if (type2layer == null) {
-                type2layer = new HashMap<String, WeakReference<BlockHighlighting>>();
+                type2layer = new HashMap<>();
                 comp2layer.put(component, type2layer);
             }
 
-            type2layer.put(layer.getLayerTypeId(), new WeakReference<BlockHighlighting>(layer));
+            type2layer.put(layer.getLayerTypeId(), new WeakReference<>(layer));
         }
     }
     
@@ -925,14 +923,14 @@ public final class EditorFindSupport {
     }
 
     public void setHistory(List<SPW> spwList){
-        this.historyList = new ArrayList<SPW>(spwList);
+        this.historyList = new ArrayList<>(spwList);
         if (!spwList.isEmpty())
             setLastSelected(spwList.get(0));
 //        firePropertyChange(FIND_HISTORY_CHANGED_PROP,null,null);
     }
     
     public void setReplaceHistory(List<RP> rpList){
-        this.replaceList = new ArrayList<RP>(rpList);
+        this.replaceList = new ArrayList<>(rpList);
     }
     
     public List<SPW> getHistory(){
@@ -975,10 +973,10 @@ public final class EditorFindSupport {
     }
     
     public final static class SPW{
-        private String searchExpression;
-        private boolean wholeWords;
-        private boolean matchCase;
-        private boolean regExp;
+        private final String searchExpression;
+        private final boolean wholeWords;
+        private final boolean matchCase;
+        private final boolean regExp;
         
         public SPW(String searchExpression, boolean wholeWords,
             boolean matchCase, boolean regExp){
@@ -1045,8 +1043,8 @@ public final class EditorFindSupport {
 
     public final static class RP {
 
-        private String replaceExpression;
-        private boolean preserveCase;
+        private final String replaceExpression;
+        private final boolean preserveCase;
 
         public RP(String replaceExpression, boolean preserveCase) {
             this.replaceExpression = replaceExpression;
